--- a/pream/LibraryView/Library.storyboard
+++ b/pream/LibraryView/Library.storyboard
@@ -63,7 +63,11 @@ to use your filter</string>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="46" id="6DT-uE-y7H"/>
                                         </constraints>
-                                        <state key="normal" title="Button"/>
+                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="15"/>
+                                        <state key="normal" title="Button" backgroundImage="rectangle2Copy2">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <state key="disabled" backgroundImage="start"/>
                                         <connections>
                                             <action selector="doneButtonAction:" destination="5Ur-sJ-UpT" eventType="touchUpInside" id="3Tz-Gk-xVI"/>
                                         </connections>
@@ -182,4 +186,8 @@ to use your filter</string>
             <point key="canvasLocation" x="47" y="115"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="rectangle2Copy2" width="260" height="46"/>
+        <image name="start" width="335" height="45"/>
+    </resources>
 </document>
