--- a/pream/LibraryView/Library.storyboard
+++ b/pream/LibraryView/Library.storyboard
@@ -22,8 +22,8 @@
                                 <rect key="frame" x="37.5" y="181" width="300" height="305"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4hI-uz-pTG">
-                                        <rect key="frame" x="260" y="10" width="30" height="30"/>
-                                        <state key="normal" title="닫기"/>
+                                        <rect key="frame" x="250" y="10" width="40" height="40"/>
+                                        <state key="normal" backgroundImage="icX"/>
                                         <connections>
                                             <action selector="closeButtonAction:" destination="5Ur-sJ-UpT" eventType="touchUpInside" id="IX4-uU-5ZR"/>
                                         </connections>
@@ -187,6 +187,7 @@ to use your filter</string>
         </scene>
     </scenes>
     <resources>
+        <image name="icX" width="40" height="40"/>
         <image name="rectangle2Copy2" width="260" height="46"/>
         <image name="start" width="335" height="45"/>
     </resources>
